# most-rockoon-functional-agent

./: README.md  main.py  pyproject.toml  pyrightconfig.json
agent/: SKILL.md  claude_desktop_config.json  mcp.json
scripts/: configure-remote-test-env.sh
src/mosk_rockoon_functional_agent/: __init__.py  config.py  netpol.py  server.py  ssh_remote.py
