[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosk-rockoon-functional-agent"
version = "0.1.0"
description = "MCP server: SSH setup for Rockoon functional tests on MOSK master/worker nodes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# PyCharm / Pylance / pyright: use the project venv so third-party imports (e.g. mcp) resolve.
[tool.pyright]
include = ["src", "main.py"]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
